# libjpeg

./: .gitignore  CMakeLists.txt  Makefile  Makefile.template  Makefile_Settings.clang  Makefile_Settings.gcc  README  README.history  README.license  README.license.gpl  README.license.itu  README.md  autoconfig.h  autoconfig.h.in  automakefile  automakefile.in  config.h  configure  configure.in  cptosvn  cutheader.pl  doxyconfig  doxyfilter.py  newheader
CVS/: Entries
boxes/: Makefile  alphabox.cpp  alphabox.hpp  box.cpp  box.hpp  checksumbox.cpp  checksumbox.hpp  colortrafobox.cpp  colortrafobox.hpp  databox.cpp  databox.hpp  dctbox.cpp  dctbox.hpp  filetypebox.cpp  filetypebox.hpp  floattonemappingbox.cpp  floattonemappingbox.hpp  floattransformationbox.cpp  floattransformationbox.hpp  inversetonemappingbox.cpp  inversetonemappingbox.hpp  lineartransformationbox.cpp  lineartransformationbox.hpp  matrixbox.cpp  matrixbox.hpp  mergingspecbox.cpp  mergingspecbox.hpp  namespace.cpp  namespace.hpp  nonlineartrafobox.cpp  nonlineartrafobox.hpp  outputconversionbox.cpp  outputconversionbox.hpp  parametrictonemappingbox.cpp  parametrictonemappingbox.hpp  refinementspecbox.cpp  refinementspecbox.hpp  superbox.cpp  superbox.hpp  tonemapperbox.cpp  (+1 more)
cmd/: CMakeLists.txt  Makefile  bitmaphook.cpp  bitmaphook.hpp  defaulttmoc.cpp  defaulttmoc.hpp  encodea.cpp  encodea.hpp  encodeb.cpp  encodeb.hpp  encodec.cpp  encodec.hpp  filehook.cpp  filehook.hpp  iohelpers.cpp  iohelpers.hpp  main.cpp  main.hpp  reconstruct.cpp  reconstruct.hpp  tmo.cpp  tmo.hpp
cmd/CVS/: Entries  Repository
codestream/: Makefile  acdifferentiallosslessscan.cpp  acdifferentiallosslessscan.hpp  acdifferentialsequentialscan.cpp  acdifferentialsequentialscan.hpp  aclosslessscan.cpp  aclosslessscan.hpp  acrefinementscan.cpp  acrefinementscan.hpp  acsequentialscan.cpp  acsequentialscan.hpp  acvesascan.cpp  acvesascan.hpp  decoder.cpp  decoder.hpp  differentiallosslessscan.cpp  differentiallosslessscan.hpp  differentialscan.cpp  differentialscan.hpp  encoder.cpp  encoder.hpp  entropyparser.cpp  entropyparser.hpp  hiddenrefinementscan.cpp  hiddenrefinementscan.hpp  image.cpp  image.hpp  jpeglsscan.cpp  jpeglsscan.hpp  lineinterleavedlsscan.cpp  lineinterleavedlsscan.hpp  losslessscan.cpp  losslessscan.hpp  predictivescan.cpp  predictivescan.hpp  predictor.cpp  predictor.hpp  predictorbase.cpp  predictorbase.hpp  rectanglerequest.cpp  (+21 more)
codestream/CVS/: Entries  Repository
coding/: Makefile  actemplate.cpp  actemplate.hpp  arithmetictemplate.cpp  arithmetictemplate.hpp  arthdeco.cpp  arthdeco.hpp  blockrow.cpp  blockrow.hpp  decodertemplate.cpp  decodertemplate.hpp  huffmancoder.cpp  huffmancoder.hpp  huffmandecoder.cpp  huffmandecoder.hpp  huffmanstatistics.cpp  huffmanstatistics.hpp  huffmantemplate.cpp  huffmantemplate.hpp  qmcoder.cpp  qmcoder.hpp  quantizedrow.cpp  quantizedrow.hpp
coding/CVS/: Entries  (+1 more)
colortrafo/: Makefile  colortrafo.cpp  colortrafo.hpp  colortransformerfactory.cpp  colortransformerfactory.hpp  floattrafo.cpp  floattrafo.hpp  integertrafo.cpp  integertrafo.hpp  lslosslesstrafo.cpp  lslosslesstrafo.hpp  multiplicationtrafo.cpp  multiplicationtrafo.hpp  rcttrafo.cpp  rcttrafo.hpp  trivialtrafo.cpp  trivialtrafo.hpp  ycbcrtrafo.cpp  ycbcrtrafo.hpp
control/: Makefile  bitmapctrl.cpp  bitmapctrl.hpp  blockbitmaprequester.cpp  blockbitmaprequester.hpp  blockbuffer.cpp  blockbuffer.hpp  blockctrl.cpp  blockctrl.hpp  blocklineadapter.cpp  blocklineadapter.hpp  bufferctrl.cpp  bufferctrl.hpp  hierarchicalbitmaprequester.cpp  hierarchicalbitmaprequester.hpp  lineadapter.cpp  lineadapter.hpp  linebitmaprequester.cpp  linebitmaprequester.hpp  linebuffer.cpp  linebuffer.hpp  linelineadapter.cpp  linelineadapter.hpp  linemerger.cpp  linemerger.hpp  residualblockhelper.cpp  residualblockhelper.hpp  residualbuffer.cpp  residualbuffer.hpp
ctrafo/: Makefile  YCbCr444ToRGB.cpp  YCbCr444ToRGB.hpp
dct/: Makefile  dct.cpp  dct.hpp  deringing.cpp  deringing.hpp  fdct.cpp  fdct.hpp  hadamard.cpp  hadamard.hpp  idct.cpp  idct.hpp  idct_alt.cpp  idct_alt.hpp  liftingdct.cpp  liftingdct.hpp  sermsdct.cpp  sermsdct.hpp
interface/: Makefile  bitmaphook.cpp  bitmaphook.hpp  hooks.cpp  hooks.hpp  imagebitmap.cpp  imagebitmap.hpp  jpeg.cpp  jpeg.hpp  jpgtypes.cpp  jpgtypes.hpp  parameters.cpp  parameters.hpp  tagitem.cpp  tagitem.hpp  types.cpp  types.hpp
io/: Makefile  bitstream.cpp  bitstream.hpp  bytestream.cpp  bytestream.hpp  checksumadapter.cpp  checksumadapter.hpp  decoderstream.cpp  decoderstream.hpp  iostream.cpp  iostream.hpp  memorystream.cpp  memorystream.hpp  randomaccessstream.cpp  randomaccessstream.hpp  staticstream.cpp  staticstream.hpp
marker/: Makefile  actable.cpp  actable.hpp  adobemarker.cpp  adobemarker.hpp  component.cpp  component.hpp  exifmarker.cpp  exifmarker.hpp  frame.cpp  frame.hpp  huffmantable.cpp  huffmantable.hpp  jfifmarker.cpp  jfifmarker.hpp  losslessmarker.cpp  losslessmarker.hpp  lscolortrafo.cpp  lscolortrafo.hpp  quantization.cpp  quantization.hpp  quantizationtable.cpp  quantizationtable.hpp  residualmarker.cpp  residualmarker.hpp  residualspecsmarker.cpp  residualspecsmarker.hpp  restartintervalmarker.cpp  restartintervalmarker.hpp  scan.cpp  scan.hpp  scantypes.cpp  scantypes.hpp  thresholds.cpp  thresholds.hpp  tonemappingmarker.cpp  tonemappingmarker.hpp
std/: Makefile  assert.cpp  assert.hpp  ctype.cpp  ctype.hpp  errno.cpp  errno.hpp  math.hpp  setjmp.hpp  stdarg.hpp  stddef.hpp  stdio.cpp  stdio.hpp  stdlib.cpp  stdlib.hpp  string.cpp  string.hpp  unistd.cpp  unistd.hpp
tools/: Makefile  checksum.cpp  checksum.hpp  debug.cpp  debug.hpp  environment.cpp  environment.hpp  line.cpp  line.hpp  numerics.cpp  numerics.hpp  priorityqueue.cpp  priorityqueue.hpp  rectangle.cpp  rectangle.hpp  traits.cpp  traits.hpp
upsampling/: Makefile  cositedupsampler.cpp  cositedupsampler.hpp  downsampler.cpp  downsampler.hpp  downsamplerbase.cpp  downsamplerbase.hpp  interdownsampler.cpp  interdownsampler.hpp  upsampler.cpp  upsampler.hpp  upsamplerbase.cpp  upsamplerbase.hpp
(+36 files in other folders)
